# media-information-download

./: .gitignore  .npmignore  AGENTS.md  Makefile  README.md  media_tui.py  package.json  pyproject.toml  requirements-transcribe.txt  run.ps1  run.sh  youtube_download.py  youtube_download_transcribe.py
.github/workflows/: npm-publish.yml
media_information_download/: audio.py  config.py  models.py  output.py  pipeline.py  transcription.py  tui.py
media_information_download/downloaders/: http.py  youtube.py
media_information_download/sources/: rss.py  youtube.py
scripts/: install_macos.sh  install_windows.ps1
tests/: test_media_pipeline.py
