[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "media-information-download"
version = "0.1.5"
description = "Terminal app for downloading media from YouTube or RSS feeds, converting to MP3, and generating Whisper transcripts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2024.1.1",
]

[project.optional-dependencies]
transcribe = [
  "openai-whisper>=20231117",
  "torch>=2.2.0",
]

[project.scripts]
media-information-download = "media_information_download.tui:main"
media-info-download = "media_information_download.tui:main"
media-info-cli = "media_information_download.tui:main"

[tool.setuptools.packages.find]
include = ["media_information_download*"]
